Archive2/f7/679434a8a00088/output
main.cpp: In function 'int main()':
main.cpp:8:17: error: switch quantity not an integer
     switch (name) {
                 ^
main.cpp:9:40: error: the value of 'name' is not usable in a constant expression
         case (strcmp(name, "SRAD") == 0):
                                        ^
main.cpp:5:17: note: 'name' was not declared 'constexpr'
     const char* name  = "lol";
                 ^
main.cpp:9:40: error: the value of 'name' is not usable in a constant expression
         case (strcmp(name, "SRAD") == 0):
                                        ^
main.cpp:5:17: note: 'name' was not declared 'constexpr'
     const char* name  = "lol";
                 ^
main.cpp:6:17: warning: unused variable 'value' [-Wunused-variable]
     const char* value = "wut";
                 ^
