Archive2/f7/679434a8a00088/main.cpp
#include <string.h>

int main()
{
    const char* name  = "lol";
    const char* value = "wut";
    
    switch (name) {
        case (strcmp(name, "SRAD") == 0):
            break;
    }
}